# firmware-v2

./: Cargo.toml  sdkconfig.defaults  setenv.sh
.cargo/: config.toml
src/: controller.rs  main.rs  network.rs  serial.rs
