[package]
name = "firmware-v2"
version = "0.1.0"
authors = ["wangg"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.30", features = ["binstart"] }
esp-idf-hal = "0.32"
embedded-hal = "0.2"
esp-idf-svc = "0.36"
embedded-svc = "0.16"
anyhow = "1.0.53"
#bitvec = "1"

[build-dependencies]
embuild = "0.28"
anyhow = "1"
